# aise-toolkit-demo

./: .gitignore  README.md  aise.spec  pyproject.toml  requirements.txt
aise_toolkit_demo/: __init__.py  cli.py  utils.py
aise_toolkit_demo/app/: app.py  app_utiles.py
tests/: test_aise_toolkit_demo.py
