[project]
name = "aise-toolkit-demo"
version = "0.5"
description = "A set of tools to assist developer to use AI"
readme = "README.md"
authors = [{name = "Lei Xu"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click"
]

[project.urls]
Homepage = "https://github.com/ups216/aise-toolkit-demo"
Changelog = "https://github.com/ups216/aise-toolkit-demo/releases"
Issues = "https://github.com/ups216/aise-toolkit-demo/issues"
CI = "https://github.com/ups216/aise-toolkit-demo/actions"

[project.entry-points.console_scripts]
aise-toolkit-demo = "aise_toolkit_demo.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
